--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
         <input type="text" id="username" name="username" placeholder="Username (try byoduser, admin, guest)" required>
         <input type="password" id="password" name="password" placeholder="Password (securepass, cloudadmin, byodguest)" required>
         <button type="submit">Login to Cloud</button>
+        <p>Don’t have an account? <a href="{{ url_for('register') }}">Register here</a></p>
     </form>
     <div id="result"></div>
     <div class="info">
