--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,11 @@
         <input type="text" id="username" name="username" placeholder="Username (try byoduser, admin, guest)" required>
         <input type="password" id="password" name="password" placeholder="Password (securepass, cloudadmin, byodguest)" required>
         <button type="submit">Login to Cloud</button>
+        <div style="margin-top: 20px;">
+            <a href="{{ url_for('google.login') }}">
+                <button type="button">Sign in with Google</button>
+            </a>
+        </div>
         <p>Don’t have an account? <a href="{{ url_for('register') }}">Register here</a></p>
     </form>
     <div id="result"></div>
