--- a/templates/register.html
+++ b/templates/register.html
@@ -2,15 +2,20 @@
 <html>
 <head>
     <title>Register</title>
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
+<div class="container">
     <h1>Register</h1>
+    {% if error %}
+    <p class="error">{{ error }}</p>
+    {% endif %}
     <form method="POST" action="{{ url_for('register') }}">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br><br>
+        <input type="text" id="username" name="username" required><br>
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
+        <input type="password" id="password" name="password" required><br>
 
         <label for="role">Select Role:</label>
         <select id="role" name="role" required>
@@ -18,11 +23,12 @@
             <option value="BYOD User">BYOD User</option>
             <option value="Administrator">Administrator</option>
             <option value="Guest">Guest</option>
-        </select><br><br>
+        </select><br>
 
         <button type="submit">Register</button>
     </form>
 
     <p>Already have an account? <a href="{{ url_for('index') }}">Back to Login</a></p>
+</div>
 </body>
 </html>
